Fix footer z-index

--- a/css/less/style.less
+++ b/css/less/style.less
@@ -237,6 +237,7 @@ main {
 }
 
 footer {
+  z-index: 11;
   > div {
     margin: 0 auto;
     padding: 25px 20px;
